--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <nav class="nav">
         <div class="div_header">
-      
+            <label for="toggle">&#9776;</label>
+            <input type="checkbox" id="toggle"/>
         <div class="div_logo">
             <img class="logo" src="image/logo.png">
         </div>
@@ -188,7 +189,7 @@
         </div>
         </div>
 
-        <div class="contact">
+        <div class="contact3">
             <div class="div_h1_contact">
                 <h1 class="h1_contact">CONTACT US</h1>
             </div>
